[package]
name = "example_mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modloader_api = { path = "../../modloader_api" }
example_api = { path = "../example_api" }